[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/SequenceManager/SequenceManager.gd" type="Script" id=1]
[ext_resource path="res://Game/UI/ButtonMasher/ButtonMasher.tscn" type="PackedScene" id=2]

[node name="SequenceManager" type="Spatial" groups=["SequenceManager"]]
script = ExtResource( 1 )

[node name="MainCamera" type="Camera" parent="."]
transform = Transform( -0.956443, 0.203733, -0.209069, 0, 0.716187, 0.697908, 0.29192, 0.667509, -0.684992, -4.15276, 13.5999, -12.5844 )
current = true
fov = 30.0
near = 0.1
far = 1000.0

[node name="SequenceCamera" type="Camera" parent="."]
transform = Transform( -0.611929, 0.29116, -0.73537, 0, 0.929774, 0.368131, 0.790913, 0.22527, -0.568955, -0.00688577, 1.50674, 0.930075 )

[node name="Oppenent1Pos" type="Spatial" parent="."]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 1.25, 0, 1.25 )

[node name="Oppenent2Pos" type="Spatial" parent="."]
transform = Transform( 1, 0, 2.38419e-07, 0, 1, 0, -2.38419e-07, 0, 1, 1.25, 0, 2 )

[node name="ButtonMasher" parent="." instance=ExtResource( 2 )]
visible = false
